Renamed "verbose" property.

--- a/src/jlogger.properties
+++ b/src/jlogger.properties
@@ -3,4 +3,4 @@ jlogger.formatter.message = [$date] <$class_name> $message
 #jlogger.print.class = net.palmund.logger.test.unit.Stream
 #jlogger.print.class = java.lang.System.err
 jlogger.filter.ignoreClasses = java.lang.String
-jlogger.redirect = /jlogger-test.properties
+#jlogger.print.verbose = false
