--- a/src/jlogger.properties
+++ b/src/jlogger.properties
@@ -1,5 +1,6 @@
 jlogger.formatter.time = d/M/yyyy kk:mm:ss.SSS
 jlogger.formatter.message = [$date] <$class_name> $message
+jlogger.formatter.class = net.palmund.logger.test.TestFormatter
 #jlogger.print.class = net.palmund.logger.test.unit.Stream
 #jlogger.print.class = java.lang.System.err
 jlogger.filter.ignoreClasses = java.lang.String
